SERVER-19415 Fix planCacheListQueryShapes command to report correct query predicate